[package]
name = "pamb_os"
version = "0.1.0"
authors = ["Deepak Sirone", "Arpan Kapoor"]

[lib]
crate-type = ["staticlib"]
 
[dependencies]
rlibc = "1.0.0"
spin = "0.3.4"
cpuio = "*"
pic8259_simple = "*"
x86 = "*"
bit_field = "*"
multiboot_pamb = { path = "../rust/multiboot_pamb" } 
bitflags = "0.7.0"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[profile.dev]
panic = "abort"
